src/app.scss
@import "values.scss";

:root {
  font-family: Ubuntu, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: normal;
  font-weight: 400;

  color-scheme: light dark;
  color: $theme-text;
  background-color: $theme-bg;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/Ubuntu-Regular.ttf') format('truetype');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url('/fonts/Ubuntu-Bold.ttf') format('truetype');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Fira Code';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/FiraCode-Regular.woff2') format('woff2');
}

@font-face {
  font-family: "Iosevka";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/IosevkaCustomNerdFont-Regular.ttf') format('truetype');
}

#app {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-content: stretch;
}

a {
  font-weight: 500;
  color: tomato;
  text-decoration: inherit;
}

a:hover {
  color: tomato;
}

body {
  margin: 0;
}

.flex-gap {
  flex-grow: 1;
}

code,
.code-font {
  font-family: 'Fira Code', monospace;
}

table {
  border-spacing: 0px;
  border-collapse: initial;

  thead,
  tbody tr {
    background-color: $table-row;

    &:hover {
      background-color: $table-row-highlight;
    }

    th {
      background-color: $table-header;
      padding: 10px 15px;
      text-align: left;
      white-space: nowrap;
      height: 40px;
    }

    td {
      display: table-cell;
      vertical-align: inherit;
      text-align: left;
      font-size: 0.875rem;
      line-height: 1rem;
      padding: 0px 15px;
      white-space: nowrap;
      height: 40px;
    }
  }

  &.action-table tbody tr:not(.empty-row) td:last-child {
    display: flex;
    justify-content: flex-end;
    padding-right: 0;
  }
}

